k8s/drone/kube-secrets-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-kube-secrets
  namespace: drone
  labels:
    app.kubernetes.io/name: drone-kube-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-kube-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone-kube-secrets
    spec:
      containers:
      - name: kube-secrets
        image: drone/kubernetes-secrets:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: drone-secrets
  namespace: drone
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: drone-kube-secrets
  type: ClusterIP
