k8s/drone/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: drone
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  strategy: {}
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
      - image: drone/drone:2
        name: drone
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drone
    app.kubernetes.io/instance: drone
  name: drone
  namespace: drone
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: drone
